# dev-council

./: .gitignore  BENCHMARK.md  README.md  TESTING_SUITE.md  agent.py  compaction.py  config.py  context.py  dev_council.py  providers.py  pyproject.toml  skills-lock.json  tool_registry.py  tools.py
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/app/: cli.py  main.py  onboard.py
backend/app/agents/: coder_agent.py  coder_state.py  flow_diagram.py  instructions_agent.py  manager.py  milestone.py  project_lead.py  reviewer_agent.py  tech_stack_agent.py
backend/app/core/: config.py
backend/app/memory/: coder_memory.py  memory.py
backend/app/structured_outputs/: milestone.py  project_lead.py
backend/app/tools/: file_editor.py  file_reader.py  file_tree.py  file_writer.py  llm_resources.py  memory_tools.py  mermaid.py  path_utils.py  save_file.py  shell.py
checkpoint/: store.py
mcp/: __init__.py  client.py  config.py  types.py
memory/: __init__.py  store.py  tools.py
skill/: builtin.py  executor.py  loader.py  tools.py
task/: __init__.py  store.py
tests/: benchmark_bcb.py  evaluate_samples.py  sanitize_samples.py  test_final_presentation_upgrade.py  test_minimal_runtime.py  test_pipeline_checkpoint.py  test_robustness.py  verify_integrity.py
