[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-council"
version = "2.1.0"
description = "Minimal BTP coding CLI with Ollama local/cloud support"
readme = "README.md"
requires-python = ">=3.11, <3.13"
license = { text = "MIT" }
dependencies = [
    "datasets>=4.8.4",
    "httpx>=0.27.0",
    "pytest>=9.0.3",
    "rich>=13.0.0",
    "tqdm>=4.67.3",
]

[project.scripts]
dev-council = "dev_council:main"

[tool.setuptools]
py-modules = [
    "dev_council",
    "agent",
    "compaction",
    "config",
    "context",
    "memory",
    "providers",
    "skills",
    "tool_registry",
    "tools",
]
packages = ["mcp", "memory", "skill", "task", "checkpoint"]

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'"
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
norecursedirs = [".git", ".pytest_cache", "pytest-cache-files-*", "__pycache__"]
